[gd_scene load_steps=5 format=3 uid="uid://djql2bdlgmwbw"]

[ext_resource type="Texture2D" uid="uid://wyb2syxa4h6s" path="res://Sprites/ball_red_small_alt.png" id="1_p5fnb"]
[ext_resource type="Script" path="res://Scripts/selector.gd" id="2_mfscb"]
[ext_resource type="Texture2D" uid="uid://cg41nfendyr2a" path="res://Sprites/ballbrown.png" id="3_t0ynt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ohxvl"]
radius = 50.8405

[node name="selector" type="Sprite2D" groups=["selector"]]
z_index = 10
scale = Vector2(0.0852339, 0.0852339)
texture = ExtResource("1_p5fnb")
script = ExtResource("2_mfscb")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_ohxvl")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(1.18542, 1.18542)
texture = ExtResource("3_t0ynt")

[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_exited"]
